--- a/lambda_funcs/TensorflowLambda/Dockerfile
+++ b/lambda_funcs/TensorflowLambda/Dockerfile
@@ -6,11 +6,6 @@ RUN yum update -y && \
     rm -Rf /var/cache/yum
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
-COPY dryer_prediction_lambda.py ./
-COPY modeling_features.py ./
-COPY processing ./
-RUN pip install .
-RUN pip freeze | grep tensorboard | xargs pip uninstall -y
-RUN pip freeze | grep google | xargs pip uninstall -y
-RUN pip cache purge
-CMD ["dryer_prediction_lambda.handler"]
+COPY tensorflow_lambda.py ./
+
+CMD ["tensorflow_lambda.handler"]
